--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node src/main.mjs",
+    "start": "node API/server.js",
     "test": "node src/test.js"
   },
   "keywords": [],
