--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node API/server.js",
+    "start": "node API/server.js"
   },
   "keywords": [],
   "author": "",
